// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders without crashing 1`] = `
<header
  class="Header"
>
  <h1>
    
  </h1>
  <button
    class="Button"
  >
    + Bounty
  </button>
</header>
`;

exports[`shows title props 1`] = `
<header
  class="Header"
>
  <h1>
    Title
  </h1>
  <button
    class="Button"
  >
    + Bounty
  </button>
</header>
`;
